[gd_scene load_steps=5 format=3 uid="uid://d16oh4bmexnxp"]

[ext_resource type="PackedScene" uid="uid://j6dcaolvefn5" path="res://mainGame/player.tscn" id="1_r4jqd"]
[ext_resource type="Script" path="res://mainGame/game.gd" id="1_xo3cr"]
[ext_resource type="PackedScene" uid="uid://8f22traqca73" path="res://mainGame/pinetree.tscn" id="2_55xlx"]

[sub_resource type="Curve2D" id="Curve2D_w2p6n"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -192, -177, 0, 0, 0, 0, 2004, -177, 0, 0, 0, 0, 2008, 1255, 0, 0, 0, 0, -179, 1255, 0, 0, 0, 0, -192, -173)
}
point_count = 5

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_xo3cr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1919.0
offset_bottom = 1084.0

[node name="Player" parent="." instance=ExtResource("1_r4jqd")]
position = Vector2(906, 553)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-906, -553)
curve = SubResource("Curve2D_w2p6n")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(141.181, -177)
progress = 333.182

[node name="pinetree" parent="." instance=ExtResource("2_55xlx")]
position = Vector2(1617, 963)

[node name="pinetree2" parent="." instance=ExtResource("2_55xlx")]
position = Vector2(1543, 533)

[node name="pinetree3" parent="." instance=ExtResource("2_55xlx")]
position = Vector2(813, 1013)

[node name="pinetree4" parent="." instance=ExtResource("2_55xlx")]
position = Vector2(1595, 492)

[node name="pinetree5" parent="." instance=ExtResource("2_55xlx")]
position = Vector2(527, 292)

[node name="pinetree6" parent="." instance=ExtResource("2_55xlx")]
position = Vector2(982, 185)

[node name="pinetree7" parent="." instance=ExtResource("2_55xlx")]
position = Vector2(216, 823)

[node name="pinetree8" parent="." instance=ExtResource("2_55xlx")]
position = Vector2(132, 103)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="gameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="gameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.658824)

[node name="Label" type="Label" parent="gameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -11.5
offset_right = 43.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 111
text = "Game Over"

[connection signal="healthDepleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
